# skillcornerviz

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/skillcornerviz/: __init__.py
src/skillcornerviz/standard_plots/: __init__.py  bar_plot.py  formating.py  formatting.py  narrative_ranking_plot.py  radar_plot.py  scatter_plot.py  summary_table.py  swarm_violin_plot.py  table_grid.py  zscore_dotplot.py
src/skillcornerviz/utils/: _fonts.py  constants.py  skillcorner_physical_utils.py  skillcorner_utils.py
tests/: tests.py
