[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillcornerviz"
version = "1.1.2"
authors = [
    {name="Liam Bailey"},
    {name="Markos Bontozoglou"},
    {name="Michael Nanopoulos"},
    {name="SkillCorner"}
]
description = "A Python package for processing and visualizing SkillCorner data with SkillCorner brand styling."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    'adjustText>=0.7.3',
    'matplotlib>=3.7.2',
    'numpy>=1.24.2',
    'pandas>=1.5.3',
    'scipy>=1.10.0',
    'seaborn>=0.11.2',
]

[project.urls]
GitHub = "https://github.com/SkillCorner/skillcornerviz"

[tool.setuptools.packages.find]
where = ["src"]
include = ["skillcornerviz", "skillcornerviz.*"]

[tool.setuptools.package-data]
skillcornerviz = ["resources/Shentox/*.otf", "resources/Roboto/*.ttf"]

[tool.pytest.ini_options]
pythonpath = ["src"]
